[gd_scene load_steps=9 format=2]

[ext_resource path="res://TopLeftUI.gd" type="Script" id=1]
[ext_resource path="res://EmptyBigCrystalSlot.png" type="Texture" id=2]
[ext_resource path="res://AmethystHeart.png" type="Texture" id=3]
[ext_resource path="res://FilledCrystalSlotYellow.png" type="Texture" id=4]
[ext_resource path="res://FilledCrystalSlotGreen.png" type="Texture" id=5]
[ext_resource path="res://FilledCrystalSlotBlue.png" type="Texture" id=6]
[ext_resource path="res://FilledCrystalSlotRed.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Yellow",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Red",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Green",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Blue",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Empty",
"speed": 5.0
} ]

[node name="TopLeftUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrystalHeart1" type="TextureRect" parent="."]
margin_left = 72.0
margin_top = 8.0
margin_right = 96.0
margin_bottom = 32.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrystalHeart2" type="TextureRect" parent="."]
margin_left = 112.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 32.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrystalHeart3" type="TextureRect" parent="."]
margin_left = 152.0
margin_top = 8.0
margin_right = 176.0
margin_bottom = 32.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BigCrystalSlot" type="AnimatedSprite" parent="."]
position = Vector2( 32, 24 )
frames = SubResource( 1 )
animation = "Green"
